doc: root/bus-stop.html| declared.; Style: timeShift.css| text_area_prompt declared

--- a/style/timeShift.css
+++ b/style/timeShift.css
@@ -25,3 +25,10 @@ background-size: cover;
 div {
     padding-bottom: 48px;
 }
+
+.text_prompt_area {
+    width: 100%;
+    max-width: 1024px;
+    color: white;
+    text-align: left;
+}
